[project]
name = "toolset"
version = "0.1.0"
description = "AI-friendly toolset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docstring-parser>=0.17.0",
    "gql>=4.0.0",
    "libtmux>=0.47.0",
    "playwright>=1.55.0",
    "psutil>=7.1.3",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
]
